# llm-mlx

./: README.md  llm_mlx.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_mlx.py
