[project]
name = "llm-mlx"
version = "0.2.1"
description = "Support for MLX models in LLM"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "llm",
    "mlx-lm",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-mlx"
Changelog = "https://github.com/simonw/llm-mlx/releases"
Issues = "https://github.com/simonw/llm-mlx/issues"
CI = "https://github.com/simonw/llm-mlx/actions"

[project.entry-points.llm]
mlx = "llm_mlx"

[project.optional-dependencies]
test = ["pytest"]
